--- a/UCI-Dashbord-final.ipynb
+++ b/UCI-Dashbord-final.ipynb
@@ -2125,7 +2125,70 @@
     }
    ],
    "source": [
-    "print(patients.describe()) "
+    "print(patients.describe())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 353,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "               age       sex        cp  trestbps      chol       fbs  \\\n",
+      "age       1.000000 -0.097542  0.104139  0.284946  0.208950  0.118530   \n",
+      "sex      -0.097542  1.000000  0.010084 -0.064456 -0.199915  0.047862   \n",
+      "cp        0.104139  0.010084  1.000000 -0.036077  0.072319 -0.039975   \n",
+      "trestbps  0.284946 -0.064456 -0.036077  1.000000  0.130120  0.175340   \n",
+      "chol      0.208950 -0.199915  0.072319  0.130120  1.000000  0.009841   \n",
+      "fbs       0.118530  0.047862 -0.039975  0.175340  0.009841  1.000000   \n",
+      "restecg   0.148868  0.021647  0.067505  0.146560  0.171043  0.069564   \n",
+      "thalach  -0.393806 -0.048663 -0.334422 -0.045351 -0.003432 -0.007854   \n",
+      "exang     0.091661  0.146201  0.384060  0.064762  0.061310  0.025665   \n",
+      "oldpeak   0.203805  0.102173  0.202277  0.189171  0.046564  0.005747   \n",
+      "slope     0.161770  0.037533  0.152050  0.117382 -0.004062  0.059894   \n",
+      "ca        0.362605  0.093185  0.233214  0.098773  0.119000  0.145478   \n",
+      "thal      0.127389  0.380936  0.265246  0.133554  0.014214  0.071358   \n",
+      "goal      0.222853  0.224469  0.407075  0.157754  0.070909  0.059186   \n",
+      "\n",
+      "           restecg   thalach     exang   oldpeak     slope        ca  \\\n",
+      "age       0.148868 -0.393806  0.091661  0.203805  0.161770  0.362605   \n",
+      "sex       0.021647 -0.048663  0.146201  0.102173  0.037533  0.093185   \n",
+      "cp        0.067505 -0.334422  0.384060  0.202277  0.152050  0.233214   \n",
+      "trestbps  0.146560 -0.045351  0.064762  0.189171  0.117382  0.098773   \n",
+      "chol      0.171043 -0.003432  0.061310  0.046564 -0.004062  0.119000   \n",
+      "fbs       0.069564 -0.007854  0.025665  0.005747  0.059894  0.145478   \n",
+      "restecg   1.000000 -0.083389  0.084867  0.114133  0.133946  0.128343   \n",
+      "thalach  -0.083389  1.000000 -0.378103 -0.343085 -0.385601 -0.264246   \n",
+      "exang     0.084867 -0.378103  1.000000  0.288223  0.257748  0.145570   \n",
+      "oldpeak   0.114133 -0.343085  0.288223  1.000000  0.577537  0.295832   \n",
+      "slope     0.133946 -0.385601  0.257748  0.577537  1.000000  0.110119   \n",
+      "ca        0.128343 -0.264246  0.145570  0.295832  0.110119  1.000000   \n",
+      "thal      0.024531 -0.279631  0.329680  0.341004  0.287232  0.256382   \n",
+      "goal      0.183696 -0.415040  0.397057  0.504092  0.377957  0.518909   \n",
+      "\n",
+      "              thal      goal  \n",
+      "age       0.127389  0.222853  \n",
+      "sex       0.380936  0.224469  \n",
+      "cp        0.265246  0.407075  \n",
+      "trestbps  0.133554  0.157754  \n",
+      "chol      0.014214  0.070909  \n",
+      "fbs       0.071358  0.059186  \n",
+      "restecg   0.024531  0.183696  \n",
+      "thalach  -0.279631 -0.415040  \n",
+      "exang     0.329680  0.397057  \n",
+      "oldpeak   0.341004  0.504092  \n",
+      "slope     0.287232  0.377957  \n",
+      "ca        0.256382  0.518909  \n",
+      "thal      1.000000  0.509923  \n",
+      "goal      0.509923  1.000000  \n"
+     ]
+    }
+   ],
+   "source": [
+    "print(patients.corr())"
    ]
   },
   {
